@@ -2,6 +2,7 @@
 
 changes in sbcl-1.3.9:
   * enhancement: more compact low-level error signaling code
+  * optimization: faster out of line fixnum-float comparisons.
 
 changes in sbcl-1.3.9 relative to sbcl-1.3.8:
   * minor incompatible change: NAMESTRING prefers to return a BASE-STRING
